# hyprsic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  default.nix  flake.nix  lsphelper.sh  main.cpp  meson.build  shell.nix
resources/dbus/: StatusNotifierWatcher.xml
resources/icons/: LICENSE-Material.txt
src/: Display.cpp  Display.hpp  main.cpp
src/BaseInstances/: DbusSystem.cpp
src/Collectors/: Battery.cpp  Bluetooth.cpp  Disk.cpp  Memory.cpp  Network.cpp  PlayingNow.cpp  SysLoad.cpp  Temperature.cpp
src/Hyprland/: Workspaces.cpp
src/Managers/: Bluetooth.cpp
src/app/: app.hpp  app_cli.cpp  app_dbus.cpp  app_ui.cpp  cmdline.cpp  cmdline.hpp  context.cpp  context.hpp  main.cpp  window.cpp  window.hpp
src/app/header/: app.hpp  window.hpp
src/collectors/: battery.cpp  bluetooth.cpp  bluetooth.hpp  disk.cpp  disk.hpp  network.cpp  network.hpp  playing_now.cpp  playing_now.hpp
src/collectors/sysinfo/: disk.cpp  memory.hpp  stats.hpp  sys_load.cpp  sys_load.hpp
src/collectors/workspaces/: hyprland.cpp  hyprland.hpp
src/database/: db_manager.cpp  db_manager.hpp
src/debug/: console_preview.cpp  console_preview.hpp
src/logging/: manager.cpp  manager.hpp
src/modules/bluetooth/: bluetooth_manager.cpp  bluetooth_manager.hpp  manager.cpp  manager.hpp  module.cpp  module.hpp  window.cpp  window.hpp
src/modules/bluetooth/header/: manager.hpp
src/modules/brightness/: manager.cpp  manager.hpp  module.cpp  module.hpp  window.cpp  window.hpp
src/modules/brightness/header/: manager.hpp  module.hpp
src/modules/clipboard/: manager.cpp  manager.hpp
src/modules/media/: playing_now.cpp  playing_now.hpp
src/modules/mpris/: manager.cpp  manager.hpp  module.cpp  module.hpp  window.cpp  window.hpp
src/modules/mpris/header/: manager.hpp  window.hpp
src/modules/notifications/: manager.cpp  manager.hpp  module.cpp  module.hpp  notification_manager.cpp  notification_manager.hpp  window.cpp  window.hpp
src/modules/notifications/header/: manager.hpp  module.hpp
src/modules/pulseaudio/: manager.cpp  manager.hpp  module.cpp  module.hpp  window.cpp  window.hpp
src/modules/pulseaudio/header/: manager.hpp  module.hpp  window.hpp
src/modules/screensaver/: manager.cpp  manager.hpp  module.cpp  module.hpp
src/modules/screensaver/header/: manager.hpp
src/modules/statusnotifier/: manager.cpp  manager.hpp  module.cpp  module.hpp
src/modules/statusnotifier/header/: manager.hpp  module.hpp
src/modules/sysinfo/: battery.cpp  battery.hpp  disk.hpp  memory.cpp  memory.hpp  module.cpp  module.hpp  network.hpp  stats.cpp  stats.hpp  sys_load.hpp
src/modules/sysinfo/header/: module.hpp
src/modules/sysinfo/header/manager/: battery.hpp  disk.hpp  network.hpp  temperature.hpp
src/modules/sysinfo/manager/: battery.cpp  battery.hpp  disk.cpp  disk.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp  stats.cpp  stats.hpp  sys_load.cpp  sys_load.hpp  temperature.cpp  temperature.hpp
src/modules/wifi/: manager.cpp  manager.hpp  module.cpp  module.hpp  window.cpp  window.hpp
src/modules/wifi/header/: manager.hpp  module.hpp
src/modules/workspaces/: hyprland.cpp  hyprland.hpp
src/modules/workspaces/hyprland/: manager.cpp  manager.hpp  module.cpp  module.hpp
src/modules/workspaces/hyprland/header/: manager.hpp
src/resources/: icons.h  icons.hpp  store.cpp  store.hpp
src/services/: bluetooth.cpp  bluetooth.hpp  cli_client.cpp  context.cpp  database.cpp  logging.cpp
src/services/header/: cli_client.hpp  context.hpp  database.hpp  logging.hpp
src/utils/: dbus_utils.cpp  dbus_utils.hpp  helper_func.cpp  helper_func.hpp
src/wayland/: frame_buffer.cpp  frame_buffer.hpp  listener.cpp  listener.hpp  manager.cpp  manager.hpp
src/wayland/inputs/: input_listener.hpp
